# magicq-macro-editor

./: pyproject.toml
.github/workflows/: build.yml
